Bug 1133892, proxy release urls on main thread in imap protocol, r=jorgk

--HG--
extra : rebase_source : c944b98308bb04b890ad9df38437f93525e045bd